AWS-Terraform/homework-1/example/loadbalancing.tf
resource "aws_lb" "this" {
  name               = "task-1"
  security_groups    = [aws_security_group.lb.id]
  subnets            = [aws_subnet.this.id]
  internal           = false
  load_balancer_type = "application"
}

resource "aws_lb_listener" "this" {
  load_balancer_arn = aws_lb.this.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.this.arn
  }
}

resource "aws_lb_target_group" "this" {
  name     = "task-1"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.this.id
}

resource "aws_lb_target_group_attachment" "this" {
  target_group_arn = aws_lb_target_group.this.arn
  target_id        = aws_instance.this.id
}
